# anychain-ffi-rust

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
docs/: ffi_lib_definitions.md  how-to-build.md  spec.md
examples/nodejs/: btc.js  eth.js  how-to-run.md  mnemonic.js  package.json  trx.js
src/: cbinding.rs  lib.rs  napi.rs
src/core/: _type.rs  btc.rs  chain_type.rs  eth.rs  mod.rs  trx.rs  util.rs
