[package]
name = "anychain-ffi-lib"
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"
version = "0.1.0"

[lib]
name = "anychain_ffi_lib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anychain-core = { version = "0.1.6" }
anychain-kms = { version = "0.1.8" }
anychain-bitcoin = { version = "0.1.7" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
digest = "0.10.7"
hex = "0.4.3"
rand = "0.8.5"
libsecp256k1 = "0.7.1"
neon = { version = "0.10", optional = true, features = ["napi-6"], default-features = false }

[features]
default = ["cbinding"]
cbinding = []
napi = ["neon"]

[build-dependencies]
cbindgen = "0.27.0"
