[package]
name = "anychain-ffi-lib"
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"
version = "0.1.0"

[lib]
name = "anychain_ffi_lib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ethabi = "18.0.0"
libsecp256k1 = "0.7.1"
ethereum-types = "0.13.1"
digest = "0.10.7"
hex = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
libaes = "0.7.0"
sha2 = "0.10.8"
protobuf = "=3.7.2"
jni = { version = "0.20", optional = true }
neon = { version = "0.10", optional = true, features = ["napi-6"], default-features = false }
anychain-core = "0.1.8"
anychain-kms = "0.1.21"
anychain-bitcoin = "0.1.15"
anychain-ethereum = "0.1.35"
anychain-tron = "0.2.14"
bs58 = "0.5.1"
url = "2.3.1"

[features]
default = ["cbinding"]
cbinding = []
napi = ["neon"]

[build-dependencies]
cbindgen = "0.27.0"
